--- a/frontend/src/sass/_modal-lightbox.scss
+++ b/frontend/src/sass/_modal-lightbox.scss
@@ -104,10 +104,14 @@
             margin-bottom: 5px;
 
             span {
-                // margin: 1rem 0 1rem 1.2rem;
+                margin-left: 1.2rem;
                 background: hsla(110, 40%, 56%, 0.5); 
                 padding: 0 0.3rem;
                 // height: 100%;
+
+                &:first-child {
+                    margin-left: 0;
+                }
                 
             }
         }
@@ -125,7 +129,7 @@
                 transition: all 0.5s ease;
                 
                 .tiny-thumb {
-                    flex: 1 0 auto;
+                    flex: 0 0 auto;
                     position: relative;
                     margin: 0 10px 5px 0;
                     height: 50px;
