--- a/frontend/src/sass/_modal-login.scss
+++ b/frontend/src/sass/_modal-login.scss
@@ -8,7 +8,7 @@
         top: 50%;
         background: #f4f4f4;
         margin: auto;
-        width: 30%;
+        width: 400px;
         box-shadow: 0 5px 8px 0 black, 0 7px 20px 0 #333;
         transition: opacity 0.5s, transform 0.5s;
         // transform: translateY(-100px);
